Fix can't move, stuck tile, random, map buttons

--- a/src/utils/map.scss
+++ b/src/utils/map.scss
@@ -2,20 +2,17 @@
   position: relative;
 }
 .map-buttons-wrapper {
-  display: flex;
-  justify-content: center;
   position: absolute;
-  top: 0.5rem;
-  right: 0px;
-  left: 0;
+  top: 0.25rem;
+  right: 0.25rem;
   pointer-events: none;
 }
 .map-buttons {
   display: flex;
-  gap: 1rem;
+  gap: 0.5rem;
   background: #fff;
-  padding: 0.75rem 1rem;
-  border-radius: 1rem;
+  padding: 0.5rem 0.75rem;
+  border-radius: 0.5rem;
   pointer-events: auto;
 }
 .place-new .ocean {
